syntax = "proto3";

//
// todo x: proto 文件命名不能是 `rpc.proto`, 会冲突. pb 文件名， 控制 main（）文件名
//

// todo x: 控制 grpc 注册服务名
package user.authn.rpc.v1; // TODO X: 每个服务都不同， 需要更改此参数来区分+注册

// todo x: 统一命名为 pb，无需更改
option go_package = "./pb";


////////////////////////////////////////////////////////////////////////////////////

//
// todo x: 控制生成的 rpc 文件夹名, 统一命名为 Service， 无需更改
//
service Service {
    // Register 用户注册:
    rpc Register(UserRegisterReq) returns(UserRegisterResp);

    // CheckAccount 帐号状态检测:
    rpc CheckAccount(UserCheckAccountReq) returns(UserCheckAccountResp);

    // Login 用户登录:
    rpc Login(UserLoginReq) returns(UserLoginResp);

    // Logout 用户退出:
    rpc Logout(UserLogoutReq) returns(UserLogoutResp);

    // AuthMobile 移动端: 鉴权 + token
    rpc AuthMobile(AuthMobileReq) returns(AuthMobileResp);

    // AuthWeb web端: 鉴权 + cookie
    rpc AuthWeb(AuthWebReq) returns(AuthWebResp);
}


////////////////////////////////////////////////////////////////////////////////////

message Request {
    string ping = 1;
}

message Response {
    string pong = 1;
}


////////////////////////////////////////////////////////////////////////////////////


// auth_type: for register and login
enum AuthType {
    Unknown = 0;
    // mobile + password
    Mobile = 1;
    // email + password
    Email = 2;
    // username + password
    Username = 3;
    // mobile + sms_code
    MobileSms = 4;
    // email + email_code
    EmailCode = 5;
    // oauth
    Oauth = 6;
}


message UserRegisterReq {
    string username = 1;
    string password = 2;

    string email = 3;
    string mobile_no = 4;
    string mobile_country = 5;
    AuthType register_type = 6;
}

message UserRegisterResp {
    string user_id = 1;
    string token = 2;
    string status = 3;
}


////////////////////////////////////////////////////////////////////////////////////

// check account
message UserCheckAccountReq {
    string username = 1;
    string email = 2;
    string mobile_no = 3;
    string mobile_country = 4;
    AuthType register_type = 5;
}

message UserCheckAccountResp {
    string user_id = 1;
    // 帐号状态
    string status = 2;
}

////////////////////////////////////////////////////////////////////////////////////

message UserLoginReq {
    string username = 1;
    string password = 2;
    string email = 3;
    string mobile_no = 4;
    string mobile_country = 5;
    string sms_code = 6;
    string login_type = 7;
}

message UserLoginResp {
    string user_id = 1;
    string token = 2;
    string status = 3;
}


////////////////////////////////////////////////////////////////////////////////////

message UserLogoutReq {
    string user_id = 1;
}

message UserLogoutResp {
    string user_id = 1;
    string status = 3;
}

////////////////////////////////////////////////////////////////////////////////////

message AuthMobileReq {
    string user_id = 1;
}

message AuthMobileResp {
    string user_id = 1;
    string token = 2;
    string status = 3;
}

////////////////////////////////////////////////////////////////////////////////////

message AuthWebReq {
    string user_id = 1;
}

message AuthWebResp {
    string user_id = 1;
    string token = 2;
    string status = 3;
}
